--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ classifiers = [
 dependencies = [
     "psycopg2-binary>=2.9.0",
     "sqlalchemy>=1.4.0",
+    "cryptography>=41.0.0",
+    "PyJWT>=2.8.0",
+    "pyotp>=2.9.0",
+    "qrcode[pil]>=7.4.0",
 ]
 
 [project.optional-dependencies]
